src/test/deca/syntax/invalid/resultats/test29_while-synt.res
./src/test/deca/syntax/invalid/test29_while.deca:15:7: mismatched input ')' expecting {INT, '-', 'false', 'new', 'null', 'readInt', 'readFloat', 'this', 'true', IDENT, '(', '!', FLOAT, STRING}
